feat: metemos tablas que faltan de las entidades que tenemos hasta ahora, creamos metodos para Table (faltan tests)
