# src/main/java/com/mycompany/bookme/table/dao/models/entities/TableEntity.java
@@ -36,6 +36,9 @@ public class TableEntity extends AuditableEntity {
   @Column(nullable = false)
   private Integer capacity;
 
+  @Column(length = 500)
+  private String observations;
+
   @ManyToOne
   @JoinColumn(name = "restaurant_id")
   private RestaurantEntity restaurant;
